--- a/src/main/resources/cn/jeff/game/boxfx/MainWnd.fxml
+++ b/src/main/resources/cn/jeff/game/boxfx/MainWnd.fxml
@@ -2,19 +2,46 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
 <BorderPane prefHeight="400.0" prefWidth="600.0" style="-fx-font-family: 'Courier New'; -fx-font-size: 20;"
 			xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1"
 			fx:controller="cn.jeff.game.boxfx.MainWndJ">
 	<top>
 		<FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="10.0" vgap="10.0" BorderPane.alignment="CENTER">
-			<Button mnemonicParsing="false" text="Button" onAction="#btnClick01"/>
+			<Button mnemonicParsing="false" onAction="#btnClick01" text="Button"/>
 			<Button mnemonicParsing="false" text="Button"/>
 			<padding>
 				<Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
 			</padding>
 		</FlowPane>
 	</top>
+	<center>
+		<GridPane BorderPane.alignment="CENTER">
+			<columnConstraints>
+				<ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="30.0"/>
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="30.0"/>
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="30.0"/>
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="30.0"/>
+				<ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
+			</columnConstraints>
+			<rowConstraints>
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS"/>
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS"/>
+			</rowConstraints>
+			<ImageView fx:id="img1" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true"
+					   GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+			<ImageView fx:id="img2" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true"
+					   GridPane.columnIndex="2" GridPane.rowIndex="1"/>
+		</GridPane>
+	</center>
 </BorderPane>
