--- a/src/main/resources/cn/jeff/game/boxfx/MainWnd.fxml
+++ b/src/main/resources/cn/jeff/game/boxfx/MainWnd.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.FlowPane?>
 
@@ -10,8 +11,18 @@
 			fx:controller="cn.jeff.game.boxfx.MainWndJ">
 	<top>
 		<FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="10.0" vgap="10.0" BorderPane.alignment="CENTER">
-			<Button mnemonicParsing="false" onAction="#btnClick01" text="Button"/>
-			<Button mnemonicParsing="false" onAction="#btnClick02" text="Button"/>
+			<Button onAction="#prevStage" mnemonicParsing="false" text="&lt;&lt;">
+				<tooltip>
+					<Tooltip text="上一关"/>
+				</tooltip>
+			</Button>
+			<Button mnemonicParsing="false" onAction="#selectStage" text="选关"/>
+			<Button mnemonicParsing="false" onAction="#nextStage" text="&gt;&gt;">
+				<tooltip>
+					<Tooltip text="下一关"/>
+				</tooltip>
+			</Button>
+			<Button mnemonicParsing="false" text="重玩本关"/>
 			<padding>
 				<Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
 			</padding>
