改名，避免使用“Map”和“Stage”，不管“Scene”，因为在tornado程序中很少直接操作[javafx.scene.Scene]，而且也想不到贴切的名字代替“场景”这个词。

--- a/src/main/resources/cn/jeff/game/boxfx/MainWnd.fxml
+++ b/src/main/resources/cn/jeff/game/boxfx/MainWnd.fxml
@@ -11,13 +11,13 @@
 			fx:controller="cn.jeff.game.boxfx.MainWndJ">
 	<top>
 		<FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="10.0" vgap="10.0" BorderPane.alignment="CENTER">
-			<Button onAction="#prevStage" mnemonicParsing="false" text="&lt;&lt;">
+			<Button onAction="#prevRoom" mnemonicParsing="false" text="&lt;&lt;">
 				<tooltip>
 					<Tooltip text="上一关"/>
 				</tooltip>
 			</Button>
-			<Button mnemonicParsing="false" onAction="#selectStage" text="选关"/>
-			<Button mnemonicParsing="false" onAction="#nextStage" text="&gt;&gt;">
+			<Button mnemonicParsing="false" onAction="#selectRoom" text="选关"/>
+			<Button mnemonicParsing="false" onAction="#nextRoom" text="&gt;&gt;">
 				<tooltip>
 					<Tooltip text="下一关"/>
 				</tooltip>
