--- a/src/main/resources/cn/jeff/game/boxfx/MainWnd.fxml
+++ b/src/main/resources/cn/jeff/game/boxfx/MainWnd.fxml
@@ -11,18 +11,18 @@
 			fx:controller="cn.jeff.game.boxfx.MainWndJ">
 	<top>
 		<FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="10.0" vgap="10.0" BorderPane.alignment="CENTER">
-			<Button onAction="#prevRoom" mnemonicParsing="false" text="&lt;&lt;">
+			<Button focusTraversable="false" mnemonicParsing="false" onAction="#prevRoom" text="&lt;&lt;">
 				<tooltip>
 					<Tooltip text="上一关"/>
 				</tooltip>
 			</Button>
-			<Button mnemonicParsing="false" onAction="#selectRoom" text="选关"/>
-			<Button mnemonicParsing="false" onAction="#nextRoom" text="&gt;&gt;">
+			<Button focusTraversable="false" mnemonicParsing="false" onAction="#selectRoom" text="选关"/>
+			<Button focusTraversable="false" mnemonicParsing="false" onAction="#nextRoom" text="&gt;&gt;">
 				<tooltip>
 					<Tooltip text="下一关"/>
 				</tooltip>
 			</Button>
-			<Button mnemonicParsing="false" text="重玩本关"/>
+			<Button focusTraversable="false" mnemonicParsing="false" text="重玩本关"/>
 			<padding>
 				<Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
 			</padding>
