--- a/src/main/resources/cn/jeff/game/boxfx/MainWnd.fxml
+++ b/src/main/resources/cn/jeff/game/boxfx/MainWnd.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.FlowPane?>
@@ -22,10 +23,17 @@
 					<Tooltip text="下一关"/>
 				</tooltip>
 			</Button>
-			<Button focusTraversable="false" mnemonicParsing="false" text="重玩本关"/>
+			<Button focusTraversable="false" onAction="#playAgain" mnemonicParsing="false" text="重玩本关"/>
 			<padding>
 				<Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
 			</padding>
 		</FlowPane>
 	</top>
+	<bottom>
+		<Label text="Label" BorderPane.alignment="CENTER" fx:id="statusLabel">
+			<padding>
+				<Insets bottom="8.0" left="8.0" right="8.0" top="8.0"/>
+			</padding>
+		</Label>
+	</bottom>
 </BorderPane>
