--- a/src/main/resources/cn/jeff/game/boxfx/AiWnd.fxml
+++ b/src/main/resources/cn/jeff/game/boxfx/AiWnd.fxml
@@ -9,8 +9,9 @@
 			xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
 			fx:controller="cn.jeff.game.boxfx.AiWndJ">
 	<bottom>
-		<HBox alignment="CENTER" BorderPane.alignment="CENTER">
+		<HBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
 			<Button mnemonicParsing="false" onAction="#abort" text="放弃自动求解"/>
+			<Button mnemonicParsing="false" onAction="#testIt" text="试试"/>
 			<padding>
 				<Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
 			</padding>
