--- a/src/main/resources/cn/jeff/game/boxfx/AiWnd.fxml
+++ b/src/main/resources/cn/jeff/game/boxfx/AiWnd.fxml
@@ -9,12 +9,18 @@
 			xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
 			fx:controller="cn.jeff.game.boxfx.AiWndJ">
 	<bottom>
-		<HBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+		<HBox alignment="BOTTOM_CENTER" spacing="10.0" BorderPane.alignment="CENTER">
 			<Button fx:id="btnAutoDemo" mnemonicParsing="false" onAction="#autoDemo" text="自动演示"/>
-			<Button fx:id="btnReset" mnemonicParsing="false" onAction="#demoReset" text="從頭開始"/>
-			<Button fx:id="btnNext" defaultButton="true" mnemonicParsing="false"
-					onAction="#demoNext" text="下一步"/>
-			<Label fx:id="stepLabel" text="第一步"/>
+			<VBox alignment="CENTER" style="-fx-background-color: #ffeecc;">
+				<Label style="-fx-font-size: 16;" text="┌─────────手动演示─────────┐"/>
+				<HBox alignment="CENTER" spacing="4.0">
+					<Button fx:id="btnReset" mnemonicParsing="false" onAction="#demoReset"
+							text="從頭開始"/>
+					<Button fx:id="btnNext" defaultButton="true" mnemonicParsing="false"
+							onAction="#demoNext" text="下一步"/>
+					<Label fx:id="stepLabel" text="第一步"/>
+				</HBox>
+			</VBox>
 			<Button mnemonicParsing="false" onAction="#abort" text="放弃自动求解"/>
 			<Button mnemonicParsing="false" onAction="#testIt" text="试试"/>
 			<padding>
