--- a/src/main/resources/cn/jeff/game/boxfx/MainWnd.fxml
+++ b/src/main/resources/cn/jeff/game/boxfx/MainWnd.fxml
@@ -1,37 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Tooltip?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.FlowPane?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" style="-fx-font-family: 'Courier New'; -fx-font-size: 20;"
-			xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1"
+<BorderPane prefHeight="400.0" prefWidth="600.0"
+			style="-fx-font-family: 'Courier New'; -fx-font-size: 20;"
+			xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
 			fx:controller="cn.jeff.game.boxfx.MainWndJ">
 	<top>
-		<FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="10.0" vgap="10.0" BorderPane.alignment="CENTER">
-			<Button focusTraversable="false" mnemonicParsing="false" onAction="#prevRoom" text="&lt;&lt;">
+		<FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="10.0" vgap="10.0"
+				  BorderPane.alignment="CENTER">
+			<Button focusTraversable="false" mnemonicParsing="false" onAction="#prevRoom"
+					text="&lt;&lt;">
 				<tooltip>
 					<Tooltip text="上一关"/>
 				</tooltip>
 			</Button>
-			<Button focusTraversable="false" mnemonicParsing="false" onAction="#selectRoom" text="选关"/>
-			<Button focusTraversable="false" mnemonicParsing="false" onAction="#nextRoom" text="&gt;&gt;">
+			<Button focusTraversable="false" mnemonicParsing="false" onAction="#selectRoom"
+					text="选关"/>
+			<Button focusTraversable="false" mnemonicParsing="false" onAction="#nextRoom"
+					text="&gt;&gt;">
 				<tooltip>
 					<Tooltip text="下一关"/>
 				</tooltip>
 			</Button>
-			<Button focusTraversable="false" onAction="#playAgain" mnemonicParsing="false" text="重玩本关"/>
-			<Button focusTraversable="false" onAction="#autoResolve" mnemonicParsing="false" text="AI求解"/>
+			<Button focusTraversable="false" mnemonicParsing="false" onAction="#playAgain"
+					text="重玩本关"/>
+			<Button focusTraversable="false" mnemonicParsing="false" onAction="#autoResolve"
+					text="AI求解"/>
 			<padding>
 				<Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
 			</padding>
 		</FlowPane>
 	</top>
 	<bottom>
-		<Label text="Label" BorderPane.alignment="CENTER" fx:id="statusLabel">
+		<Label fx:id="statusLabel" text="Label" wrapText="true" BorderPane.alignment="CENTER">
 			<padding>
 				<Insets bottom="8.0" left="8.0" right="8.0" top="8.0"/>
 			</padding>
